<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>motor_driver</name>
  <version>0.0.0</version>

  <description>ROS2 Motor Driver Platform</description>

  <maintainer email="el06155@naver.com">el0615</maintainer>

  <license>TODO: License declaration</license>

  <!-- Runtime Dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <!-- Launch Dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <!-- Test Dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>